--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/server": "4.11.0",
+    "cors": "2.8.5",
     "graphql": "16.9.0",
     "graphql-iso-date": "3.6.1",
     "mongoose": "8.7.3"
