--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "bcrypt": "5.1.1",
+    "express": "4.21.1",
     "gravatar": "1.8.2",
+    "helmet": "8.0.0",
     "jsonwebtoken": "9.0.2"
   }
 }
