--- a/api/package.json
+++ b/api/package.json
@@ -9,13 +9,21 @@
   },
   "dependencies": {
     "@apollo/server": "4.11.0",
+    "bcrypt": "5.1.1",
     "cors": "2.8.5",
+    "dotenv": "16.4.5",
+    "express": "4.21.1",
     "graphql": "16.9.0",
+    "graphql-depth-limit": "1.1.0",
     "graphql-iso-date": "3.6.1",
+    "graphql-tag": "2.12.6",
+    "graphql-validation-complexity": "0.4.2",
+    "gravatar": "1.8.2",
+    "helmet": "8.0.0",
+    "jsonwebtoken": "9.0.2",
     "mongoose": "8.7.3"
   },
   "devDependencies": {
-    "dotenv": "16.4.5",
     "nodemon": "3.1.7"
   }
 }
