--- a/api/package.json
+++ b/api/package.json
@@ -21,7 +21,8 @@
     "gravatar": "1.8.2",
     "helmet": "8.0.0",
     "jsonwebtoken": "9.0.2",
-    "mongoose": "8.7.3"
+    "mongoose": "8.7.3",
+    "redis": "4.7.0"
   },
   "devDependencies": {
     "nodemon": "3.1.7"
