--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate": "graphql-codegen --config ./src/codegen.ts"
   },
   "dependencies": {
     "@apollo/client": "3.11.9",
@@ -19,6 +20,11 @@
   },
   "devDependencies": {
     "@eslint/js": "9.9.0",
+    "@graphql-codegen/cli": "5.0.3",
+    "@graphql-codegen/client-preset": "4.5.0",
+    "@graphql-codegen/typescript": "4.1.1",
+    "@graphql-codegen/typescript-operations": "4.3.1",
+    "@graphql-codegen/typescript-react-apollo": "4.3.2",
     "@types/node": "22.8.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
