--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "api:codegen": "graphql-codegen --config ./src/codegen.ts"
+    "api:codegen": "graphql-codegen --config ./src/codegen.ts",
+    "api:watch": "graphql-codegen -w --config ./src/codegen.ts"
   },
   "dependencies": {
     "@apollo/client": "3.11.9",
@@ -25,6 +26,7 @@
     "@graphql-codegen/typescript": "4.1.1",
     "@graphql-codegen/typescript-operations": "4.3.1",
     "@graphql-codegen/typescript-react-apollo": "4.3.2",
+    "@parcel/watcher": "2.5.0",
     "@types/node": "22.8.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
